# marble-frontier

./: README.md
FastMarching3D_ROS/: CMakeLists.txt  ctest.c  esdf.csv  esdf_3d.txt  hello_world_node  hello_world_node.cpp  msfm3d.c  msfm3d_node.cpp  msfm3d_test.c  opencv_boundingfrontier.cpp  package.xml  py2ctest.py  py2msfm3d.py  reach.csv  sensed.csv  simple_subscriber.py  subt_guidance_node.py  subt_true_odom.py
FastMarching3D_ROS/include/: VoxelHashMap.cpp  bresenham3d.cpp  common.c  fastmarching_astar.cpp  fibonacci_sphere.h  frontier.h  gain.h  gain.hpp  hashGrid3D.h  hashGrid3D_conversions.h  kinematics.h  mapGrid3D.h  micropather.cpp  micropather.h  msfm3d.c  poseSampling.h  reach.h  utility.h  voxelHashMap.h
FastMarching3D_ROS/launch/: A01_msfm3d.launch  backup.launch  backup_msfm3d.launch  costmap_generator.launch  costmap_generator_sim.launch  debug_sim_run.launch  frontier_planner.launch  frontier_planner_X1.launch  frontier_planner_ignition.launch  frontier_test.launch  gaintest.launch  goal_pose_planner.launch  goal_pose_planner_goals_only.launch  goal_pose_planner_planner_only.launch  goal_pose_planner_traverse_test.launch  mapping.launch  mapping_planning_and_control.launch  mapping_test.launch  msf3md.launch  msfm3d.launch  msfm3d_air.launch  msfm3d_ground.launch  msfm3d_sim.launch  msfm3d_test.launch  octomap_callback_test.launch  planning_and_control.launch  planning_and_control_test.launch  record.launch  voxelhashtest.launch
FastMarching3D_ROS/msg/: Goal.msg  GoalArray.msg  PathArray.msg
FastMarching3D_ROS/src/: VoxelHashingTest.cpp  costmap_generator.cpp  debug_paths_from_bag.cpp  depthImg2PCL2.cpp  frontier_node.cpp  frontier_planner_node.cpp  gain_test.cpp  goal_pose_planner_node.cpp  goal_pose_sampler_node.cpp  guidance.py  multi_goal_planner_node.cpp  octomap_callback_test.cpp  plot_reach.m  subt_PCL_height_filter.cpp  subt_guidance_node.py  subt_marker2pointcloud_node.py  subt_odom_publisher.py  subt_tf2odom.py  subt_tf2odom_B01.py  subt_true_odom.py  subt_true_odom_X4.py
FastMarching3D_ROS/test/src/: frontier_display_test.cpp  frontier_test.cpp  hashGrid3D_conversions_test.cpp  hashGrid3D_test.cpp  mapGrid3D_test.cpp
home_planner/: CMakeLists.txt  package.xml
home_planner/msg/: PoseGraph.msg
home_planner/src/: home_planner.py  home_planner_guidance_node.py  home_planner_node.py  home_planner_switch.py
marble_guidance/: CMakeLists.txt  package.xml
marble_guidance/launch/: guidance.launch  guidance_air.launch  guidance_air_ignition.launch  guidance_bezier.launch  guidance_home.launch
marble_guidance/src/: bezier.py  guidance.py  guidance_node.py  lookahead_node.cpp
matlab/: Agent.m  Artifact.m  FrontierPaper40x40_Fig5.mat  Neighbor.m  agent.m  angle_diff.m  bresenham.m  checkLoS.m  cloudPlaneRegression.m  deconflictGoal.m  detectGrid.m  drawOccGrid.m  findFrontier.m  findPath.m  findPathContinuous.m  findPoses.m  frontierCheck.m  frontierDetection.m  frontierPlan.m  frontierViewSamplingTest.m  fuseArtifacts.m  fuseOccGrids.m  goalPlan.m  greedycluster.m  greedycluster2D.m  lastOccGrid.mat  lastOccGridDrawing.mat  main.m  plotAgentGrid.m  plotAnchorGrid.m  plotFusedGrid.m  raycast.m  senseGrid.m
matlab/FastMarching_version3b/: compile_c_files.m
matlab/FastMarching_version3b/functions/: msfm2d.mexw64  msfm3d.mexw64  pointmin.asv
matlab/FastMarching_version3b/shortestpath/: rk4.mexw64
traversability_mapping/: CMakeLists.txt  package.xml
traversability_mapping/launch/: normal_estimation.launch  normal_estimation_sim.launch
traversability_mapping/src/: PCL_normal_filter.cpp
