<package format="2">
	<name>msfm3d</name>
	<version>0.1</version>version
	<description>
		This package subscribes to a robot pose and map (Octomap or Voxblox ESDF/TSDF) and outputs a frontie PointCloud, a goal pose, and a path to that pose.
	</description>
	<maintainer email="andmills17@gmail.com">Andrew B Mills</maintainer>

	<url>https://github.com/andrewbmills/marble-frontier</url>
	<author>Andrew B Mills</author>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>rosconsole</depend>
	<depend>rostime</depend>
	<depend>roscpp_serialization</depend>
	<depend>octomap</depend>
	<depend>boost_system</depend>
	<depend>pcl_common</depend>
	<depend>pcl_io</depend>
	<depend>pcl_filters</depend>
	<depend>pcl_features</depend>
	<depend>pcl_kdtree</depend>
	<depend>pcl_segmentation</depend>
</package>