<package format="2">
	<name>msfm3d</name>
	<version>0.1.0</version>version
	<description>
		This package subscribes to a robot pose and map (Octomap or Voxblox ESDF/TSDF) and outputs a frontier PointCloud, a goal pose, and a path to that pose.
	</description>
	<maintainer email="andmills17@gmail.com">Andrew B Mills</maintainer>

	<url>https://github.com/andrewbmills/marble-frontier</url>
	<author>Andrew B Mills</author>
	  <license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>rospy</depend>
	<depend>rosconsole</depend>
	<depend>rostime</depend>
	<depend>roscpp_serialization</depend>
	<depend>octomap_ros</depend>
	<depend>boost_system</depend>
	<depend>pcl</depend>
	<depend>pcl_conversions</depend>
	<depend>pcl_ros</depend>
	<depend>geometry_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>nav_msgs</depend>
	<depend>std_msgs</depend>
	<depend>octomap_msgs</depend>
	<depend>octomap</depend>
	<build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
