<package format="2">
	<name>traversability_mapping</name>
	<version>0.1.0</version>version
	<description>
		This package builds a traversability map from pointcloud data.
	</description>
	<maintainer email="andmills17@gmail.com">Andrew B Mills</maintainer>

	<url>https://github.com/andrewbmills/marble-frontier</url>
	<author>Andrew B Mills</author>
	  <license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>rospy</depend>
	<depend>rosconsole</depend>
	<depend>rostime</depend>
	<depend>roscpp_serialization</depend>
	<depend>pcl</depend>
	<depend>pcl_conversions</depend>
	<depend>pcl_ros</depend>
	<depend>sensor_msgs</depend>
	<depend>std_msgs</depend>
	<depend>octomap</depend>
	<depend>octomap_ros</depend>
	<depend>octomap_msgs</depend>
</package>
